Version 5.4.3 - *

- Mouseover hints are now also shown when hovering above #includes
- Fixed editor closing not always remembering the previous tab.
- The matching brace highlighter now ignores text highlighted as 'Character'.
- Custom compiler commands are now added to the end of the call to GCC.
- The function tooltip now shows which class each function belongs to.
- The compilation progress window has been moved/merged into Compile Log below.
- The MRU list now does not reverse order each time it is loaded.
- File Properties now does not add open files not belonging to the current project to project stats.
- Editor mouseover tooltips now also shows which class each function belongs to.

Version 5.4.2 - 24 Mei 2013

- Shortcuts are now saved independently from the current language.
- As of RC3, Dev-C++ will now play nicely with old settings files instead of showing a 0px high window.
- Fixed compiler default selection not being saved on first startup.
- Dev-C++ will now suggest to disable DEP instead of crash when trying to execute data.
- The compiler set validator will now not add any duplicate paths anymore.
- After saving as, the window caption will now update too.
- Fixed a few out of bounds errors.
- Fixed a rather common bug in the MRU list ("Invalid Pointer Operation").
- Compiler Options now does not permanently change directories before hitting OK.
- Fixed a crash in the parser, which didn't like "#include" without any followup.
- Fixed a whole lot of other bugs.
- Fixed random focus tabbing order in various windows.
- Default code insertion snippets are now only loaded on first startup.
- One can now hide the code tooltip for the current function using the Esc key.
- Dev-C++ will now remember the window state on startup again.
- Fixed an error in the project HTML exporter.
- Dev-C++ now remembers tab history.
- One can now delete the current line using Ctrl+D.
- Implemented line selecting functionality using triple click.