@@ -272,8 +272,14 @@ begin
 	newitem^.filename := s;
 	newitem^.MenuItem := nil; // to be filled by RebuildMRU
 
-	// insert first
-	fMRU.Insert(0, newitem);
+	if GetFileTyp(s) = utPrj then begin
+		fMRU.Insert(0, newitem);// insert first
+	end else begin // find last project
+		I := 0;
+		while GetFileTyp(PMRUItem(fMRU[I])^.filename) = utPrj do
+			Inc(I);
+		fMRU.Insert(I, newitem);// insert after last project
+	end;
 
 	RebuildMRU;
 end;
@@ -390,8 +396,8 @@ end;
 
 procedure TdmMain.RebuildMRU;
 var
-	i,startidx,count: integer;
-	Parent,Item,TopSep,BottomSep: TMenuItem;
+	i,startidx,AllCount,ProjCount,FileCount: integer;
+	Parent,Item,TopSep,MiddleSep,BottomSep: TMenuItem;
 	fNewMRU: TList;
 begin
 	// Delete all menu items
@@ -402,63 +408,70 @@ begin
 	FilterHistory;
 
 	// Determine where in the main menu to dump our list
-	Parent := fMRUMenu.Parent;
-	startidx := Parent.IndexOf(fMRUMenu) - 1; // start above
+	Parent := fMRUMenu.Parent; // Clear history item
+	startidx := Parent.IndexOf(fMRUMenu); // start above
 	if startidx = -1 then Exit; // no menu item given?
 
-	TopSep := Parent[startidx-1];
-	BottomSep := Parent[startidx];
+	TopSep := Parent[startidx-3];
+	MiddleSep := Parent[startidx-2];
+	BottomSep := Parent[startidx-1];
+	Dec(startidx,2); // start below the top separator
 
 	// Only save what is currently visible
 	fNewMRU := TList.Create;
 
 	// Add menu items up to MRUmax
-	count := 0;
+	AllCount := 0;
+	ProjCount := 0;
+	FileCount := 0; // other files
 
 	// First add projects
-	for I := 0 to fMRU.Count - 1 do begin
+	for I := 0 to min(devData.MRUMax,fMRU.Count) - 1 do begin
 		if GetFileTyp(PMRUItem(fMRU[I])^.filename) = utPrj then begin
 			Item := TMenuItem.Create(Parent);
-			Item.Caption:= Format('&%1x %s', [count, PMRUItem(fMRU[I])^.filename]);
+			Item.Caption:= Format('&%1x %s', [AllCount, PMRUItem(fMRU[I])^.filename]);
 			Item.OnClick:= fMRUClick;
-			Item.Tag:= I;
-			Parent.Insert(startidx + count,Item);
+			Item.Tag := I;
+			Parent.Insert(startidx + AllCount,Item);
 
 			// Hand a pointer to the MRU item, so it can remove it itself
 			PMRUItem(fMRU[I])^.MenuItem := Item;
 
 			fNewMRU.Add(fMRU[I]);
-			Inc(count);
-			if count = devData.MRUMax then
+			Inc(AllCount);
+			Inc(ProjCount);
+			if AllCount = devData.MRUMax then
 				break;
 		end;
 	end;
 
 	// Then add other stuff
-	if count <> devData.MRUMax then begin
+	if AllCount <> devData.MRUMax then begin
 		for I := 0 to min(devData.MRUMax,fMRU.Count) - 1 do begin
 			if GetFileTyp(PMRUItem(fMRU[I])^.filename) <> utPrj then begin
 				Item := TMenuItem.Create(Parent);
-				Item.Caption:= Format('&%1x %s', [count, PMRUItem(fMRU[I])^.filename]);
+				Item.Caption:= Format('&%1x %s', [AllCount, PMRUItem(fMRU[I])^.filename]);
 				Item.OnClick:= fMRUClick;
-				Item.Tag:= I;
-				Parent.Insert(startidx + count,Item);
+				Item.Tag := I;
+				Parent.Insert(startidx + AllCount + 1,Item); // add AFTER middle separator
 
 				// Hand a pointer to the MRU item, so it can remove it itself
 				PMRUItem(fMRU[I])^.MenuItem := Item;
 
 				fNewMRU.Add(fMRU[I]);
-				Inc(count);
-				if count = devData.MRUMax then
+				Inc(AllCount);
+				Inc(FileCount);
+				if AllCount = devData.MRUMax then
 					break;
 			end;
 		end;
 	end;
 
 	// Hide unneeded separators and clear history button
-	TopSep.Visible := (count > 0);
-	BottomSep.Visible := (count > 0);
-	fMRUMenu.Visible := (count > 0);
+	TopSep.Visible := (AllCount > 0);
+	MiddleSep.Visible := (FileCount > 0) and (ProjCount > 0);
+	BottomSep.Visible := (AllCount > 0);
+	fMRUMenu.Visible := (AllCount > 0);
 
 	// update MRU
 	fMRU.Assign(fNewMRU);
