@@ -27,8 +27,8 @@ UseCustomMakefile=0
 CustomMakefile=
 IncludeVersionInfo=0
 SupportXPThemes=0
-CompilerSet=1
-CompilerSettings=000000010011000000000100000
+CompilerSet=3
+CompilerSettings=0000000100111000000001000
 UnitCount=1
 
 [VersionInfo]
